# nmsl-telegram-bot-rs

./: .mergify.yml  Cargo.toml  Dockerfile  LICENSE  README.md  bible.json  docker-compose.yml
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
tests/: simple.rs
