[package]
name = "nmsl-telegram-bot-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nmsl-telegram-bot"
path = "./src/main.rs"

[lib]
name = "nmsl_core"
path = "./src/lib.rs"

[dependencies]
indexmap = { version = "1.7", features = ["serde-1"] }
itertools = "0.10"
jieba-rs = "0.6"
log = "0.4"
md5 = "0.7"
pinyin = "0.9"
pretty_env_logger = "0.4"
serde_json = "1.0"
teloxide = { version = "0.5", default-features = false, features = ["ctrlc_handler", "rustls", "auto-send", "macros"] }
teloxide-listener = { git = "https://github.com/PhotonQuantum/teloxide-listener", features = ["webhook"] }
tokio = { version = "1.15", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
